--- a/frontend/src/styles/index.css
+++ b/frontend/src/styles/index.css
@@ -58,6 +58,16 @@ body {
 .header__item:focus {
     color: var(--blocked-element);
 }
+.header__items:first-child:hover ~ .header__stock_dropdown{
+    display: flex;
+}
+.header__stock_dropdown {
+    display: none;
+}
+.stock_dropdown__item {
+
+}
+
 .header__field {
 
 }
@@ -156,6 +166,58 @@ body {
     padding: 10px;
 }
 
+/*loading effect*/
+.field__loading {
+    display: flex;
+    justify-content: center;
+    flex-grow: 1;
+    width: 150px;
+    height: 150px;
+}
+.loading__spinner {
+    animation: rotate 2s linear infinite;
+    top: 50%;
+    left: 50%;
+    width: 150px;
+    height: 150px;
+}
+.spinner__stroke {
+    stroke: url(#gradient);
+    stroke-linecap: round;
+    animation: dash 1.5s ease-in-out infinite;
+    stroke-width: 2px;
+}
+.global__loading {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    display: flex;
+    align-items: center;
+    z-index: -999 !important;
+}
+
+
+@keyframes rotate {
+    100% {
+        transform:rotate(360deg);
+    }
+}
+@keyframes dash {
+    0% {
+        stroke-dasharray: 1, 150;
+        stroke-dashoffset: 0;
+    }
+    50% {
+        stroke-dasharray: 90, 150;
+        stroke-dashoffset: -35;
+    }
+    100% {
+        stroke-dasharray: 90, 150;
+        stroke-dashoffset: -124;
+    }
+}
 
 @media (max-width: 768px){
     .menu__button {
