--- a/frontend/src/components/UI/Forms/auth/auth.css
+++ b/frontend/src/components/UI/Forms/auth/auth.css
@@ -36,7 +36,6 @@
 .form__auth {
     display: flex;
     flex-direction: column;
-    align-items: center;
     gap: 15px;
 }
 
@@ -59,7 +58,7 @@
 }
 
 .cell__error {
-
+    color: #ff3a75;
 }
 
 .button__submit {
