--- a/frontend/src/styles/stock.css
+++ b/frontend/src/styles/stock.css
@@ -74,7 +74,7 @@
     display: flex;
     justify-content: space-between;
 }
-.form__product_trading {
+.form_trading {
     display: flex;
     flex-direction: column;
 }
