--- a/frontend/src/styles/company.css
+++ b/frontend/src/styles/company.css
@@ -15,6 +15,9 @@
 }
 .container__company_chart {
     display: flex;
+    justify-content: center;
+    width: 100%;
+    gap: 15px;
 }
 
 .container__company {
