--- a/frontend/src/styles/profile.css
+++ b/frontend/src/styles/profile.css
@@ -96,9 +96,11 @@
 .ingredient__item {
     display: flex;
     gap: 10px;
-    border-left: 1px solid #fff;
-    border-right: 1px solid #fff;
-    padding: 0 10px;
+    background: var(--background);
+    padding: 4px 8px;
+    border-radius: 6px;
+    border: 1px solid #355059;
+    color: #fff;
 }
 .ingredient__name {
 
