--- a/frontend/src/styles/core.css
+++ b/frontend/src/styles/core.css
@@ -47,8 +47,20 @@
     flex-direction: column;
 }
 
-.input__default {
+.form__default-2 {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    color: #fff;
+}
 
+.input__default {
+    width: 100%;
+    border-radius: 2px;
+    padding: 4px 0 4px 4px;
+    background: #00000045;
+    border: 1px solid #4a4a4a;
+    color: #fff;
 }
 
 .cell__column {
