--- a/frontend/src/styles/index.css
+++ b/frontend/src/styles/index.css
@@ -6,6 +6,7 @@
 :root {
     --background: #19191fff;
     --container-background: #2c2c37;
+    --container-background-2: #1e1e2c;
     --lines: #fff306;
     --hovered-element: #34da49;
     --blocked-element: #ff8742;
@@ -29,6 +30,40 @@ body {
     height: 0;
 }
 
+.pillar__container {
+    position: fixed;
+    top: -16px;
+    bottom: 0;
+    width: 50px;
+    z-index: -1;
+    display: flex;
+    flex-direction: column;
+    margin-top: 65px;
+}
+.pillar__container_left {
+    left: 0;
+}
+.pillar__container_right {
+    right: 0;
+}
+.svg__pillar_center {
+    fill: var(--lines);
+    width: 100%;
+    height: 100%;
+    margin: -1px 0;
+}
+.svg__pillar_top {
+    fill: var(--lines);
+    width: 100%;
+    height: 20.53px;
+}
+.svg__pillar_bottom {
+    fill: var(--lines);
+    width: 100%;
+    height: 20.53px;
+    transform: rotate(180deg);
+}
+
 
 .section__header {
     display: flex;
@@ -37,22 +72,33 @@ body {
     padding: 3px;
     max-height: 60px;
     border-bottom: 2px solid var(--lines);
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    z-index: 10;
+    background: var(--background);
 }
 
 .header__items {
     display: flex;
-    justify-content: space-evenly;
     align-items: center;
     flex-grow: 1;
     height: 29px;
     font-family: sans-serif;
-    /*padding: 10px 25px;*/ /*add later*/
+    margin: 0 5%;
 }
 .header__item {
     text-decoration: none;
+    -webkit-user-select: none;
     user-select: none;
     color: #fff;
     cursor: pointer;
+    flex-grow: 1;
+    display: flex;
+    justify-content: center;
+    height: 100%;
+    align-items: center;
 }
 .header__item:hover {
     color: var(--clickable-element);
@@ -183,7 +229,7 @@ body {
 }
 
 .section__main {
-    padding: 20px;
+    margin: 70px 20px 20px 20px;
 }
 
 /*loading effect*/
@@ -219,8 +265,10 @@ body {
 }
 .global__container {
     position: fixed;
-    top: 0;
-    bottom: 0;
+    top: 50%;
+    bottom: 50%;
+    left: 50%;
+    right: 50%;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -231,7 +279,7 @@ body {
     flex-direction: column;
     align-items: flex-end;
     padding: 15px;
-    background: #1e1e2c;
+    background: var(--container-background-2);
     border: 2px solid var(--highlight-element-1);
     border-radius: 4px;
     box-shadow: 0 0 0 2px rgb(0 0 0), 0 2px 4px rgba(0, 0, 0, 0.3), 0 4px 8px rgba(0, 0, 0, 0.3), 0 0 16px rgb(0 0 0);
@@ -283,6 +331,12 @@ body {
     .header__sitename {
         padding: initial;
     }
+    .section__main {
+        margin: 56px 10px 20px 10px;
+    }
+    .pillar__container {
+        margin-top: 51px;
+    }
 }
 
 @media (max-width: 500px) {
@@ -290,9 +344,6 @@ body {
         padding: initial;
         margin-left: initial;
         justify-content: center;
-    }
-    .section__main {
-        padding: 20px 10px;
     }
 }
 
