--- a/frontend/src/styles/core.css
+++ b/frontend/src/styles/core.css
@@ -117,6 +117,11 @@
     color: #fff;
 }
 
+.cell__simple { /*used 1 time*/
+    display: flex;
+    column-gap: 25px;
+}
+
 .cell__column {
     display: flex;
     flex-direction: column;
