--- a/frontend/src/styles/index.css
+++ b/frontend/src/styles/index.css
@@ -387,5 +387,8 @@ body {
         margin-left: initial;
         justify-content: center;
     }
+    .section__main {
+        margin: 56px 0 20px 0;
+    }
 }
 
