--- a/frontend/src/components/UI/TopRating/top_rating.css
+++ b/frontend/src/components/UI/TopRating/top_rating.css
@@ -83,9 +83,11 @@
     .state__positive {
         color: initial;
         background: var(--hovered-element);
+        border-radius: 3px;
     }
     .state__negative {
         color: initial;
         background: var(--highlight-element-1);
+        border-radius: 3px;
     }
 }
