--- a/frontend/src/styles/index.css
+++ b/frontend/src/styles/index.css
@@ -99,6 +99,8 @@ body {
     justify-content: center;
     height: 100%;
     align-items: center;
+    position: relative;
+    z-index: 1;
 }
 .header__item:hover {
     color: var(--clickable-element);
@@ -106,18 +108,26 @@ body {
 .header__item:focus {
     color: var(--blocked-element);
 }
-.header__items:first-child:hover ~ .header__stock_dropdown{
+.header__item:hover .header__stock_dropdown {
     display: flex;
 }
 .header__stock_dropdown {
     display: none;
+    cursor: default;
+    flex-direction: column;
+    gap: 17px;
+    position: absolute;
+    top: -10px;
+    width: 100%;
+    padding: 49px 0 17px 0;
+    border-radius: 0 0 2px 2px;
+    background: linear-gradient(360deg, #111115, var(--background));
+    box-shadow: 0 5px 10px 0 rgb(0 0 0 / 73%);
 }
-.stock_dropdown__item {
-
-}
-
-.header__field {
-
+.dropdown__line {
+    width: 100%;
+    height: 3px;
+    background: #4c4c4c;
 }
 
 .header__sitename {
