--- a/frontend/src/styles/core.css
+++ b/frontend/src/styles/core.css
@@ -1,4 +1,3 @@
-/* move it to index later */
 
 .container__header_1 {
     display: flex;
@@ -9,17 +8,8 @@
     padding-bottom: 3px;
     margin-bottom: 5px;
     width: 100%; /* anomaly */
-}
-
-.container__header_2 {
-    display: flex;
-    justify-content: center;
-    font-family: sans-serif;
-    font-weight: 600;
-    border-bottom: 2px solid var(--highlight-element-2);
-    padding-bottom: 3px;
-    margin-bottom: 5px;
-    width: 100%;
+    text-align: center;
+    color: #fff;
 }
 
 .content__header {
@@ -71,6 +61,7 @@
     display: flex;
     flex-direction: column;
     gap: 5px;
+    width: 100%;
 }
 
 .form__default-2 {
@@ -80,6 +71,7 @@
     color: #fff;
     min-width: 300px;
     width: 100%;
+    padding: 0 5px;
 }
 
 .input__default {
@@ -138,4 +130,12 @@
     justify-content: space-between;
     gap: 50px;
     text-align: right;
+}
+
+@media (max-width: 500px) {
+    .flexible_container, .profile__header {
+        border-radius: 0 !important;
+        border-left: 0 !important;
+        border-right: 0 !important;
+    }
 }
