--- a/frontend/src/styles/company.css
+++ b/frontend/src/styles/company.css
@@ -20,36 +20,18 @@
     gap: 15px;
 }
 
-.container__company {
-    padding: 15px;
-    border-radius: 4px;
-    width: fit-content;
-    background: var(--container-background);
-    border: 2px solid #000;
-    color: #fff;
-}
-
-.company__name {
-    display: flex;
-    justify-content: center;
-    font-family: sans-serif;
-    font-weight: 600;
-    border-bottom: 2px solid var(--highlight-element-2);
-    padding-bottom: 3px;
-    margin-bottom: 3px;
-}
-
 .company__info {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
-    gap: 50px;
+    column-gap: 50px;
 }
 
 .company__column {
     display: flex;
     flex-direction: column;
     flex-wrap: wrap;
+    flex-grow: 1;
 }
 
 .company__row {
@@ -61,6 +43,7 @@
 .form__create_company {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
+    gap: 4px;
 }
 
 .company__products_list {
